metaBMA 0.6.7
===========

* transformation of effect sizes: transform_es()
* New prior family: gamma distribution
* Scale of the default prior for log odds ratio in meta_default() changed to the factor: pi/sqrt(3) = 1.81 instead of a factor of 2 (thanks to Frantisek Bartos)


metaBMA 0.6.6
===========

* Upgrade to new rstantools folder structure
* New default prior for effect size: Cauchy distribution with scale=0.707 instead of normal distribution with scale=0.3
* New defaults in meta_default() wrapper function
* Faster CRAN checks and tests


metaBMA 0.6.4
===========

* bugfix: argument "ci" for credibility intervals not working
* reference added: Gronau et al. (2020)


metaBMA 0.6.3
===========

* increased stability and precision of model-averaged posterior distribution and estimates (based on density approximations)


metaBMA 0.6.2
===========

* Moderator analysis: rename slope parameters "alpha" to "beta"
* Bugfix for meta_bma(): Only use H0 models for averaging of "d" parameter
* New tests: Scheibehenne (2017)


metaBMA 0.6.0
===========

* new function meta_ordered() for order-constrained study-effects in random-effects meta-analysis
* table with estimates shows convergence statistics (Rhat, n_eff)
* meta_default(): new labels for effect = "d", "r", "z", "logOR"
* minor bugfixes and improvements


metaBMA 0.5.0
===========

* Major refactoring (breaks compatibiltiy with previous versions)
* Possible to provide data frame via argument 'data'
* Removed arguments "d.par" and "tau.par": priors are now defined via d=prior(...), tau=prior(...)
* Possibility to fit random and fixed effects meta-analysis with moderators in stan (with JZS priors)
* Computation of log marginal likelihood with Stan samples and bridge sampling (via logml="stan")
* Improved numerical integration via integrate() [posterior distribution shifted to zero]


metaBMA 0.3.9
===========

* Updated citation for CRAN
* Added examples for meta_bma() and meta_random()
* Minor bug fixes

