@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 S3method(plot,meta_pred)
+S3method(plot,meta_sensitivity)
 S3method(plot,prior)
 S3method(plot_forest,default)
 S3method(plot_forest,meta_bma)
@@ -14,6 +15,7 @@ S3method(print,inclusion)
 S3method(print,meta_bma)
 S3method(print,meta_fixed)
 S3method(print,meta_random)
+S3method(print,meta_sensitivity)
 S3method(print,prior)
 export(bma)
 export(inclusion)
@@ -22,6 +24,7 @@ export(meta_default)
 export(meta_fixed)
 export(meta_ordered)
 export(meta_random)
+export(meta_sensitivity)
 export(plot_default)
 export(plot_forest)
 export(plot_posterior)
